# Pivot

./: .gitignore  CLAUDE.md  README.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/api/: index.ts  jobs.ts  notes.ts  watchlists.ts
client/src/components/: AnimatedTime.tsx  BasicInfoPanel.tsx  EmojiPicker.tsx  EpsChart.tsx  FinancialChart.tsx  ImageEditorModal.tsx  JobLogModal.tsx  JobStatusCell.tsx  NotesTab.tsx  SortableTab.tsx  TvChart.tsx
client/src/components/Layout/: Layout.tsx
client/src/hooks/: useServerEvents.ts
client/src/pages/Home/: Home.tsx  WatchlistPanel.tsx
client/src/pages/Login/: Login.tsx
client/src/pages/Settings/: Settings.tsx
client/src/pages/Stock/: Stock.tsx
client/src/store/: index.ts
client/src/types/: index.ts
client/src/utils/: helpers.ts  jobProgress.ts  navSort.ts  noteStyles.ts  notify.ts
prompts/: earnings.json  prompt-ep.md  prompt-vcp.md  release.json  vcp.py  vcp_prompt.py
server/: Cargo.toml  build.rs  config.toml  database.sqlite-shm  database.sqlite-wal
server/migrations/: 0001_initial.sql  0002_cik_cache.sql  0003_jobs.sql  0004_stock_analysis.sql  0005_prompts.sql  0006_watchlist_position.sql  0007_job_timing.sql  0007_notes.sql  0008_notes.sql
server/prompts/: prompt-ep-qualitative.md  prompt-ep.md  prompt-vcp-quantitative.md  prompt-vcp.md
server/src/: assets.rs  config.rs  image.rs  main.rs  markdown.rs  utils.rs  yfinance.rs
server/src/api/: auth.rs  error.rs  images.rs  jobs.rs  mod.rs  notes.rs  prompts.rs  watchlists.rs
server/src/db/: analysis.rs  edgar.rs  images.rs  jobs.rs  mod.rs  notes.rs  prompts.rs  watchlists.rs
server/src/models/: jobs.rs  mod.rs  pipeline.rs  score.rs
server/src/pipeline/: edgar.rs  ep_scheduler.rs  mod.rs  queue.rs  tradingview.rs
server/src/pipeline/score/: deepseek.rs  mod.rs  ollama.rs  test.rs
server/src/pipeline/tradingview/: basic_info.rs  document.rs  earnings.rs  forecast.rs  mod.rs  watchlist.rs
server/src/sse/: mod.rs
