[package]
name = "pivot-server"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# web
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.13", features = ["json", "query", "rustls", "cookies", "stream"], default-features = false }

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
htmd = "0.5"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# browser automation
chrome_driver = { path = "../../ChromeDriver" }

# error handling
anyhow = "1"
